newtype-tools/tests/trybuild/enum.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/trybuild/enum.rs:2:1
  |
2 | enum Enum {}
  | ^^^^
